force-app/main/default/objects/Service_Agreement__c/fields/CRM_User_Name__c.field-meta.xml
<CustomField>
    <fullName>CRM_User_Name__c</fullName>
    <label>CRM User Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>