force-app/main/default/objects/Service_Agreement__c/fields/Current__c.field-meta.xml
<CustomField>
    <fullName>Current__c</fullName>
    <label>Current Call Tracker Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CallBright</fullName>
            </value>
            <value>
                <fullName>CallFire</fullName>
            </value>
            <value>
                <fullName>CallRail</fullName>
            </value>
            <value>
                <fullName>CallSource</fullName>
            </value>
            <value>
                <fullName>Car Wars/Call Box/CI</fullName>
            </value>
            <value>
                <fullName>CRM - Dominion Vision/Direct Connect</fullName>
            </value>
            <value>
                <fullName>CRM - VinSolutions/Call Tracking</fullName>
            </value>
            <value>
                <fullName>DialogTech</fullName>
            </value>
            <value>
                <fullName>IAT/InteractiveTel</fullName>
            </value>
            <value>
                <fullName>Marchex</fullName>
            </value>
            <value>
                <fullName>Marcom Results</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>ProActive Dealer Solutions</fullName>
            </value>
            <value>
                <fullName>RingDNA</fullName>
            </value>
            <value>
                <fullName>Who’sCalling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>