force-app/main/default/objects/Service_Agreement__c/fields/Current_Call_Tracking_Setup_Name__c.field-meta.xml
<CustomField>
    <fullName>Current_Call_Tracking_Setup_Name__c</fullName>
    <label>Current Call Tracking Setup Name</label>
    <type>TextArea</type>
</CustomField>