force-app/main/default/objects/Service_Agreement__c/fields/Current_Case__c.field-meta.xml
<CustomField>
    <fullName>Current_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Support Case</inlineHelpText>
    <label>Current Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Service Agreements</relationshipLabel>
    <relationshipName>Service_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>