force-app/main/default/objects/Service_Agreement__c/fields/Current_Share_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Share_End_Date__c</fullName>
    <label>Current Share End Date</label>
    <type>Date</type>
</CustomField>