force-app/main/default/objects/Service_Agreement__c/fields/Customer_Acquisition_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Acquisition_Date__c</fullName>
    <label>Customer Acquisition Date</label>
    <type>Date</type>
</CustomField>