force-app/main/default/objects/Service_Agreement__c/fields/Customer_Age__c.field-meta.xml
<CustomField>
    <fullName>Customer_Age__c</fullName>
    <formula>Now()- CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>