force-app/main/default/objects/Service_Agreement__c/fields/Date_Authorized_Contact_Notified__c.field-meta.xml
<CustomField>
    <fullName>Date_Authorized_Contact_Notified__c</fullName>
    <description>Date that Send Authorized Sender Notification was selected and sent. Utilized for the Enrollment Department</description>
    <label>Date Authorized Contact Notified</label>
    <type>Date</type>
</CustomField>