force-app/main/default/objects/Service_Agreement__c/fields/Date_Completed_AD_LOA__c.field-meta.xml
<CustomField>
    <fullName>Date_Completed_AD_LOA__c</fullName>
    <label>Date Completed AD/LOA</label>
    <type>DateTime</type>
</CustomField>