force-app/main/default/objects/Service_Agreement__c/fields/Date_Completed_CC__c.field-meta.xml
<CustomField>
    <fullName>Date_Completed_CC__c</fullName>
    <label>Date Completed CC</label>
    <type>DateTime</type>
</CustomField>