force-app/main/default/objects/Service_Agreement__c/fields/Date_Completed_CR360__c.field-meta.xml
<CustomField>
    <fullName>Date_Completed_CR360__c</fullName>
    <label>Date Completed CR360</label>
    <type>DateTime</type>
</CustomField>