force-app/main/default/objects/Service_Agreement__c/fields/Date_Completed_CRM__c.field-meta.xml
<CustomField>
    <fullName>Date_Completed_CRM__c</fullName>
    <label>Date Completed CRM</label>
    <type>DateTime</type>
</CustomField>