force-app/main/default/objects/Service_Agreement__c/fields/Date_Completed_LR__c.field-meta.xml
<CustomField>
    <fullName>Date_Completed_LR__c</fullName>
    <label>Date Completed LR</label>
    <type>DateTime</type>
</CustomField>