force-app/main/default/objects/Service_Agreement__c/fields/Date_Completed_LT_PA__c.field-meta.xml
<CustomField>
    <fullName>Date_Completed_LT_PA__c</fullName>
    <label>Date Completed LT/PA</label>
    <type>DateTime</type>
</CustomField>