force-app/main/default/objects/Service_Agreement__c/fields/Date_Completed_RA__c.field-meta.xml
<CustomField>
    <fullName>Date_Completed_RA__c</fullName>
    <label>Date Completed RA</label>
    <type>DateTime</type>
</CustomField>