force-app/main/default/objects/Service_Agreement__c/fields/Date_Completed_RR__c.field-meta.xml
<CustomField>
    <fullName>Date_Completed_RR__c</fullName>
    <label>Date Completed RR</label>
    <type>DateTime</type>
</CustomField>