force-app/main/default/objects/Service_Agreement__c/fields/Date_Completed_TLE__c.field-meta.xml
<CustomField>
    <fullName>Date_Completed_TLE__c</fullName>
    <label>Date Completed TLE</label>
    <type>DateTime</type>
</CustomField>