force-app/main/default/objects/Service_Agreement__c/fields/Date_Completed_WL__c.field-meta.xml
<CustomField>
    <fullName>Date_Completed_WL__c</fullName>
    <label>Date Completed WL</label>
    <type>DateTime</type>
</CustomField>