force-app/main/default/objects/Service_Agreement__c/fields/Date_Last_Account_Update_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Last_Account_Update_Sent__c</fullName>
    <label>Date Last Account Update Sent</label>
    <type>DateTime</type>
</CustomField>