force-app/main/default/objects/Service_Agreement__c/fields/Dealer_Code__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Code__c</fullName>
    <label>Dealer Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>