force-app/main/default/objects/Service_Agreement__c/fields/Dealer_Engagement_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Engagement_Enrollment__c</fullName>
    <label>Dealer Engagement - Enrollment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Engaged</fullName>
                <label>🔴 Not Engaged</label>
            </value>
            <value>
                <fullName>Somewhat Engaged</fullName>
                <label>🟡 Somewhat Engaged</label>
            </value>
            <value>
                <fullName>Highly Engaged</fullName>
                <label>🟢 Highly Engaged</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>