force-app/main/default/objects/Service_Agreement__c/fields/Dealer_Segment__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Segment__c</fullName>
    <label>Dealer Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Major Account</fullName>
            </value>
            <value>
                <fullName>Premium Account</fullName>
            </value>
            <value>
                <fullName>Standard Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>