force-app/main/default/objects/Service_Agreement__c/fields/Dealer_Socket__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Socket__c</fullName>
    <label>Dealer Socket</label>
    <type>Url</type>
</CustomField>