force-app/main/default/objects/Service_Agreement__c/fields/Discovery_Notes__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Notes__c</fullName>
    <inlineHelpText>Please include potential risks, anything unique to the contract any any notes for the implementation teams</inlineHelpText>
    <label>Discovery Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>