force-app/main/default/objects/Service_Agreement__c/fields/Display_Ad_Source__c.field-meta.xml
<CustomField>
    <fullName>Display_Ad_Source__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Determines if the Ad Source is displayed for Data Collection</inlineHelpText>
    <label>Display Ad Source</label>
    <type>Checkbox</type>
</CustomField>