force-app/main/default/objects/Service_Agreement__c/fields/Display_CRM_Information__c.field-meta.xml
<CustomField>
    <fullName>Display_CRM_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Determines if CRM Information is displayed for Data Collection</inlineHelpText>
    <label>Display CRM Information</label>
    <type>Checkbox</type>
</CustomField>