force-app/main/default/objects/Service_Agreement__c/fields/Display_Hours_of_Operation__c.field-meta.xml
<CustomField>
    <fullName>Display_Hours_of_Operation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Determines if the Hours of Operation is displayed for Data Collection</inlineHelpText>
    <label>Display Hours of Operation</label>
    <type>Checkbox</type>
</CustomField>