force-app/main/default/objects/Service_Agreement__c/fields/Display_Roster__c.field-meta.xml
<CustomField>
    <fullName>Display_Roster__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Determines if the Display Roster is displayed for Data Collection</inlineHelpText>
    <label>Display Roster</label>
    <type>Checkbox</type>
</CustomField>