force-app/main/default/objects/Service_Agreement__c/fields/Display_Sync_to_CallRevu_360_Option__c.field-meta.xml
<CustomField>
    <fullName>Display_Sync_to_CallRevu_360_Option__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this allow the button to be displayed on the page to sync to CallRevue 360</description>
    <inlineHelpText>Checking this allow the button to be displayed on the page to sync to CallRevue 360</inlineHelpText>
    <label>Display Sync to CallRevu 360 Option</label>
    <type>Checkbox</type>
</CustomField>