force-app/main/default/objects/Service_Agreement__c/fields/DMS__c.field-meta.xml
<CustomField>
    <fullName>DMS__c</fullName>
    <label>DMS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ADP/CDK</fullName>
            </value>
            <value>
                <fullName>Advent DMS</fullName>
            </value>
            <value>
                <fullName>Auto Dealer Systems</fullName>
            </value>
            <value>
                <fullName>Automate</fullName>
            </value>
            <value>
                <fullName>AutoSoft</fullName>
            </value>
            <value>
                <fullName>DealerBuilt</fullName>
            </value>
            <value>
                <fullName>DealerSocket</fullName>
            </value>
            <value>
                <fullName>Dealertrack DMS</fullName>
            </value>
            <value>
                <fullName>Dominion</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Reynolds &amp; Reynolds/Era-ignite</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>