force-app/main/default/objects/Service_Agreement__c/fields/DNI_Gmail_Account__c.field-meta.xml
<CustomField>
    <fullName>DNI_Gmail_Account__c</fullName>
    <label>DNI Gmail Account</label>
    <type>Email</type>
</CustomField>