force-app/main/default/objects/Service_Agreement__c/fields/eLead__c.field-meta.xml
<CustomField>
    <fullName>eLead__c</fullName>
    <label>eLead</label>
    <type>Url</type>
</CustomField>