force-app/main/default/objects/Service_Agreement__c/fields/Emergency_POC__c.field-meta.xml
<CustomField>
    <fullName>Emergency_POC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Emergency POC for Service Agreement Location</inlineHelpText>
    <label>Emergency POC</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Service Agreements (Emergency POC)</relationshipLabel>
    <relationshipName>Service_Agreements1</relationshipName>
    <type>Lookup</type>
</CustomField>