force-app/main/default/objects/Service_Agreement__c/fields/Enrollment_Call_Completed__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Call_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enrollment Call Completed</label>
    <type>Checkbox</type>
</CustomField>