force-app/main/default/objects/Service_Agreement__c/fields/Enrollment_Call_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Call_Scheduled__c</fullName>
    <label>Enrollment Call Scheduled</label>
    <type>DateTime</type>
</CustomField>