force-app/main/default/objects/Service_Agreement__c/fields/Enrollment_Call_Scheduled_Date2__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Call_Scheduled_Date2__c</fullName>
    <label>Enrollment Call Scheduled Date</label>
    <length>100</length>
    <type>Text</type>
</CustomField>