force-app/main/default/objects/Service_Agreement__c/fields/Enrollment_Case__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enrollment Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Service Agreements (Enrollment Case)</relationshipLabel>
    <relationshipName>Service_Agreements1</relationshipName>
    <type>Lookup</type>
</CustomField>