force-app/main/default/objects/Service_Agreement__c/fields/Enrollment_Case_Reference__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Case_Reference__c</fullName>
    <formula>if(isblank(Current_Case__c),&quot;&quot;,&quot;ref:_&quot; + substitute($Organization.Id,&quot;00000&quot;,&quot;&quot;) + &quot;._&quot; +  substitute(Current_Case__r.Id,&quot;00000&quot;,&quot;&quot;) + &quot;:ref&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enrollment Case Reference</label>
    <type>Text</type>
</CustomField>