force-app/main/default/objects/Service_Agreement__c/fields/Enrollment_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enrollment Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Agreements3</relationshipName>
    <type>Lookup</type>
</CustomField>