force-app/main/default/objects/Service_Agreement__c/fields/Enrollment_Link__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Link__c</fullName>
    <formula>Hyperlink(&quot;https://fixthephone.secure.force.com/datacollection?contactid=&quot;&amp;Authorization_Contact__c &amp;&quot;&amp;contractid=&quot;&amp;Id&amp;&quot;&amp;authcode=&quot;&amp;Authorization_Code__c,&quot;View Enrollment for &quot;&amp; Name )




/*https://fixthephone.secure.force.com/datacollection/*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enrollment Link</label>
    <type>Text</type>
</CustomField>