force-app/main/default/objects/Service_Agreement__c/fields/Enrollment_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Phone_Number__c</fullName>
    <label>Enrollment Phone Number</label>
    <type>Phone</type>
</CustomField>