force-app/main/default/objects/Service_Agreement__c/fields/Estimated_Next_Quarterly_Review__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Next_Quarterly_Review__c</fullName>
    <formula>IF(ISBLANK(Quarterly_Close_Date__c),NOW(),(Quarterly_Close_Date__c+91))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Next Quarterly Review</label>
    <type>Date</type>
</CustomField>