force-app/main/default/objects/Service_Agreement__c/fields/Features_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Features_of_Interest__c</fullName>
    <inlineHelpText>What did the customer like?</inlineHelpText>
    <label>Features of Interest</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>