force-app/main/default/objects/Service_Agreement__c/fields/First_Bill_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Bill_Date__c</fullName>
    <inlineHelpText>Originating First Bill Date; Not Inclusive of add-on&apos;s.</inlineHelpText>
    <label>First Bill Date</label>
    <type>Date</type>
</CustomField>