force-app/main/default/objects/Service_Agreement__c/fields/First_QBR_Created__c.field-meta.xml
<CustomField>
    <fullName>First_QBR_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First QBR Created</label>
    <type>Checkbox</type>
</CustomField>