force-app/main/default/objects/Service_Agreement__c/fields/Fri_Closed__c.field-meta.xml
<CustomField>
    <fullName>Fri_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fri Closed</label>
    <type>Checkbox</type>
</CustomField>