force-app/main/default/objects/Service_Agreement__c/fields/Group_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Group_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checking this box for a Group Agreement with remove it from reporting</inlineHelpText>
    <label>Group Agreement</label>
    <type>Checkbox</type>
</CustomField>