force-app/main/default/objects/Service_Agreement__c/fields/Handoff_Date__c.field-meta.xml
<CustomField>
    <fullName>Handoff_Date__c</fullName>
    <description>created for Launch in Service Agreements</description>
    <label>Handoff Date</label>
    <type>Date</type>
</CustomField>