force-app/main/default/objects/Service_Agreement__c/fields/Has_A_Current_Call_Tracking_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Has_A_Current_Call_Tracking_Vendor__c</fullName>
    <label>Has A Current Call Tracking Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>