force-app/main/default/objects/Service_Agreement__c/fields/If_a_group_add_group_number_CRM__c.field-meta.xml
<CustomField>
    <fullName>If_a_group_add_group_number_CRM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>If a group add group number CRM360</label>
    <type>Checkbox</type>
</CustomField>