force-app/main/default/objects/Service_Agreement__c/fields/Implementation_Expectations__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Expectations__c</fullName>
    <label>Implementation Expectations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>