force-app/main/default/objects/Service_Agreement__c/fields/Inbound_Call_Address__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Call_Address__c</fullName>
    <label>Inbound Call Address</label>
    <length>150</length>
    <type>Text</type>
</CustomField>