force-app/main/default/objects/Service_Agreement__c/fields/Include_in_Renewal_Opportunity_Process__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Renewal_Opportunity_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Include in Renewal Opportunity Process</inlineHelpText>
    <label>Include in Renewal Opportunity Process</label>
    <type>Checkbox</type>
</CustomField>