force-app/main/default/objects/Service_Agreement__c/fields/Intended_Check_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Intended_Check_In_Date__c</fullName>
    <label>Intended Check In Date</label>
    <type>Date</type>
</CustomField>