force-app/main/default/objects/Service_Agreement__c/fields/Intended_Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>Intended_Launch_Date__c</fullName>
    <description>updated from Launch case</description>
    <label>Intended Launch Date</label>
    <type>Date</type>
</CustomField>