force-app/main/default/objects/Service_Agreement__c/fields/Intends_to_Transfer_Existing_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Intends_to_Transfer_Existing_Vendor__c</fullName>
    <label>Intends to Transfer Existing Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>