force-app/main/default/objects/Service_Agreement__c/fields/Internal_Update_Link__c.field-meta.xml
<CustomField>
    <fullName>Internal_Update_Link__c</fullName>
    <formula>Hyperlink(&quot;/apex/ContractUpdate?contactid=&quot;&amp;Authorization_Contact__c &amp;&quot;&amp;contractid=&quot;&amp;Id&amp;&quot;&amp;na=1&quot;&amp;&quot;&amp;authcode=&quot;&amp; Authorization_Code__c &amp;&quot;na=true&quot;,&quot;Internal Enrollment Link&quot;)

/*Hyperlink(&quot;/apex/landingpage?contactid=&quot;&amp;Authorization_Contact__c &amp;&quot;&amp;contractid=&quot;&amp;Id&amp;&quot;&amp;na=1&quot;,&quot;Internal Enrollment Link&quot;)*/

/*HYPERLINK(&quot;https://callrevu.lightning.force.com/apex/ContractUpdate?contactid=&quot;&amp;Authorization_Contact__c &amp;&quot;&amp;contractid=&quot;&amp;Id,&quot;Click Here to Edit Enrollment Information&quot;)*/

/*Hyperlink(&quot;/apex/landingpage?contactid=&quot;&amp;Authorization_Contact__c &amp;&quot;&amp;contractid=&quot;&amp;Id&amp;&quot;&amp;na=1&quot;,&quot;View Enrollment&quot;)*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal Update Link</label>
    <type>Text</type>
</CustomField>