force-app/main/default/objects/Service_Agreement__c/fields/Is_CallRevu360_Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Is_CallRevu360_Parent_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is CallRevu360 Parent Account</label>
    <type>Checkbox</type>
</CustomField>