force-app/main/default/objects/Service_Agreement__c/fields/Kick_off_Event_ID__c.field-meta.xml
<CustomField>
    <fullName>Kick_off_Event_ID__c</fullName>
    <label>Kick-off Event ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>