force-app/main/default/objects/Service_Agreement__c/fields/KJ_Test__c.field-meta.xml
<CustomField>
    <fullName>KJ_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>KJ Test</label>
    <type>Checkbox</type>
</CustomField>