force-app/main/default/objects/Service_Agreement__c/fields/Last_360_Sync_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_360_Sync_Date__c</fullName>
    <label>Last 360 Sync Date</label>
    <type>DateTime</type>
</CustomField>