force-app/main/default/objects/Service_Agreement__c/fields/Last_Monthly_Review__c.field-meta.xml
<CustomField>
    <fullName>Last_Monthly_Review__c</fullName>
    <inlineHelpText>Looking at Last PM case created with Monthly review cycle</inlineHelpText>
    <label>Last Monthly Review</label>
    <type>DateTime</type>
</CustomField>