force-app/main/default/objects/Service_Agreement__c/fields/Last_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Last_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Service Agreements (Last Opportunity)</relationshipLabel>
    <relationshipName>Service_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>