force-app/main/default/objects/Service_Agreement__c/fields/Last_Opportunity_Amount__c.field-meta.xml
<CustomField>
    <fullName>Last_Opportunity_Amount__c</fullName>
    <formula>Last_Opportunity__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Opportunity Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>