force-app/main/default/objects/Service_Agreement__c/fields/Last_Opportunity_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Last_Opportunity_Order_Type__c</fullName>
    <formula>Text(Last_Opportunity__r.Order_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Opportunity Order Type</label>
    <type>Text</type>
</CustomField>