force-app/main/default/objects/Service_Agreement__c/fields/Last_Performance_Management_Sync__c.field-meta.xml
<CustomField>
    <fullName>Last_Performance_Management_Sync__c</fullName>
    <inlineHelpText>Date and Time the last performance manager or review date was synced.</inlineHelpText>
    <label>Last Performance Management  Sync</label>
    <type>DateTime</type>
</CustomField>