force-app/main/default/objects/Service_Agreement__c/fields/Last_Quarterly_Review__c.field-meta.xml
<CustomField>
    <fullName>Last_Quarterly_Review__c</fullName>
    <inlineHelpText>Looking at Last PM case created with Quarterly review cycle</inlineHelpText>
    <label>Last Quarterly Review</label>
    <type>DateTime</type>
</CustomField>