force-app/main/default/objects/Service_Agreement__c/fields/Last_Saved_Page__c.field-meta.xml
<CustomField>
    <fullName>Last_Saved_Page__c</fullName>
    <label>Last Saved Page</label>
    <length>50</length>
    <type>Text</type>
</CustomField>