force-app/main/default/objects/Service_Agreement__c/fields/Last_Workflow_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Workflow_Update__c</fullName>
    <description>Used for Debugging Workflows</description>
    <label>Last Workflow Update</label>
    <length>255</length>
    <type>Text</type>
</CustomField>