force-app/main/default/objects/Service_Agreement__c/fields/Launch_Call_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Launch_Call_Scheduled__c</fullName>
    <label>Launch Call Scheduled</label>
    <type>DateTime</type>
</CustomField>