force-app/main/default/objects/Service_Agreement__c/fields/Launch_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Launch_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Launch Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Agreements2</relationshipName>
    <type>Lookup</type>
</CustomField>