force-app/main/default/objects/Service_Agreement__c/fields/Lead_Address__c.field-meta.xml
<CustomField>
    <fullName>Lead_Address__c</fullName>
    <label>Lead Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>