force-app/main/default/objects/Service_Agreement__c/fields/Lines_Routed_Port_completed__c.field-meta.xml
<CustomField>
    <fullName>Lines_Routed_Port_completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lines Routed/Port completed</label>
    <type>Checkbox</type>
</CustomField>