force-app/main/default/objects/Service_Agreement__c/fields/Lines_Tested_Lines_created_as_needed__c.field-meta.xml
<CustomField>
    <fullName>Lines_Tested_Lines_created_as_needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lines Tested/ Lines created as needed</label>
    <type>Checkbox</type>
</CustomField>