force-app/main/default/objects/Service_Agreement__c/fields/Lines_Tested_Port_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Lines_Tested_Port_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lines Tested/ Port Accepted</label>
    <type>Checkbox</type>
</CustomField>