force-app/main/default/objects/Service_Agreement__c/fields/Main_Motivation__c.field-meta.xml
<CustomField>
    <fullName>Main_Motivation__c</fullName>
    <formula>Originating_Opportunity__r.Main_Motivation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Main Motivation</label>
    <type>Text</type>
</CustomField>