force-app/main/default/objects/Service_Agreement__c/fields/MethodCheck__c.field-meta.xml
<CustomField>
    <fullName>MethodCheck__c</fullName>
    <description>Rolls up the minimum value of HasMethod field on Ad Source</description>
    <label>MethodCheck</label>
    <summarizedField>Ad_Source__c.HasMethod__c</summarizedField>
    <summaryForeignKey>Ad_Source__c.Service_Agreement__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>