force-app/main/default/objects/Service_Agreement__c/fields/Minimum_Ad_Source_Count_For_Complete__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Ad_Source_Count_For_Complete__c</fullName>
    <defaultValue>2</defaultValue>
    <label>Minimum Ad Source Count For Complete</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>