force-app/main/default/objects/Service_Agreement__c/fields/Minimum_Roster_Count_For_Complete__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Roster_Count_For_Complete__c</fullName>
    <defaultValue>2</defaultValue>
    <label>Minimum Roster Count For Complete</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>