force-app/main/default/objects/Service_Agreement__c/fields/Mon_Closed__c.field-meta.xml
<CustomField>
    <fullName>Mon_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mon Closed</label>
    <type>Checkbox</type>
</CustomField>