force-app/main/default/objects/Service_Agreement__c/fields/Monthly_Review__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Review__c</fullName>
    <label>Monthly Review</label>
    <type>DateTime</type>
</CustomField>