force-app/main/default/objects/Service_Agreement__c/fields/Net_New_MRR_Added__c.field-meta.xml
<CustomField>
    <fullName>Net_New_MRR_Added__c</fullName>
    <formula>Last_Opportunity__r.Net_New_MRR_Added__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net New MRR Added</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>