force-app/main/default/objects/Service_Agreement__c/fields/Not_Eligible_For_Winback__c.field-meta.xml
<CustomField>
    <fullName>Not_Eligible_For_Winback__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Eligible For Winback</label>
    <type>Checkbox</type>
</CustomField>